testdata/parser/negative/26.pdl
#version 100

primitive main(in a, out b) {
	break; // illegal
}